# miloco-lite

./: .gitignore  README.md  pyproject.toml
docs/: meili-speaker-AGENTS.md  speaker-interfaces.md  从 Xiaomi Miloco 剥离出独立 CLI.md
skills/miloco-lite/: SKILL.md
src/miloco_lite/: __init__.py  __main__.py  cli.py  client.py  const.py  devices.py  errors.py  oauth.py  spec.py  store.py
